# mpris-openvr-overlay

./: Cargo.toml  LICENSE  README.md  install.cpp  manifest.vrmanifest
src/: main.rs
